force-app/main/default/objects/Community_Settings__c/Community_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>All custom settings for the Community will be stored within this object.</description>
    <label>Community Settings</label>
</CustomObject>