force-app/main/default/objects/Community_Settings__c/fields/Chatter_Action_Disable_Group_Files__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Action_Disable_Group_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, the Files Chatter Action and related Group File items will be removed from the Community Portal preventing a User from uploading a file within Unity.</description>
    <inlineHelpText>When selected, the Files Chatter Action and related Group File items will be removed from the Community Portal preventing a User from uploading a file within Unity.</inlineHelpText>
    <label>Chatter Action: Disable Group Files</label>
    <type>Checkbox</type>
</CustomField>