force-app/main/default/objects/Community_Settings__c/fields/Create_Group_Disable_Terms__c.field-meta.xml
<CustomField>
    <fullName>Create_Group_Disable_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, the Terms page will be disabled during the Create Group process.</description>
    <inlineHelpText>When selected, the Terms page will be disabled during the Create Group process.</inlineHelpText>
    <label>Create Group Disable Terms</label>
    <type>Checkbox</type>
</CustomField>