force-app/main/default/objects/Community_Settings__c/fields/Create_Group_Max_Tags__c.field-meta.xml
<CustomField>
    <fullName>Create_Group_Max_Tags__c</fullName>
    <description>The number provided in this box indicates the max number of Tags a User can apply to a Group.  When NULL, the User can apply as many tags allowed.</description>
    <inlineHelpText>The number provided in this box indicates the max number of Tags a User can apply to a Group.  When NULL, the User can apply as many tags allowed.</inlineHelpText>
    <label>Create Group Max Tags</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>