force-app/main/default/objects/Community_Settings__c/fields/Create_Group_Require_Tags__c.field-meta.xml
<CustomField>
    <fullName>Create_Group_Require_Tags__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, the User will be required to select at least 1 Tag during the Create Group creation.</description>
    <inlineHelpText>When selected, the User will be required to select at least 1 Tag during the Create Group creation.</inlineHelpText>
    <label>Create Group Require Tags</label>
    <type>Checkbox</type>
</CustomField>