force-app/main/default/objects/Community_Settings__c/fields/Disable_Change_Password__c.field-meta.xml
<CustomField>
    <fullName>Disable_Change_Password__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, the Change Password page within the Profile will be omitted from the Community Portal.</description>
    <inlineHelpText>When selected, the Change Password page within the Profile will be omitted from the Community Portal.</inlineHelpText>
    <label>Disable Change Password</label>
    <type>Checkbox</type>
</CustomField>