force-app/main/default/objects/Community_Settings__c/fields/Disable_Share__c.field-meta.xml
<CustomField>
    <fullName>Disable_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Share Button</description>
    <label>Disable Share</label>
    <type>Checkbox</type>
</CustomField>