force-app/main/default/objects/Community_Settings__c/fields/Disable_Topic_Menu__c.field-meta.xml
<CustomField>
    <fullName>Disable_Topic_Menu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Topic Menu</label>
    <type>Checkbox</type>
</CustomField>