force-app/main/default/objects/Community_Settings__c/fields/Image_Library_Folder__c.field-meta.xml
<CustomField>
    <fullName>Image_Library_Folder__c</fullName>
    <defaultValue>&quot;Image_Library&quot;</defaultValue>
    <description>field contains name of image library folder for create news.</description>
    <label>Image Library Folder</label>
    <length>60</length>
    <type>Text</type>
</CustomField>