force-app/main/default/objects/Community_Settings__c/fields/News_Accepted_Image_Types__c.field-meta.xml
<CustomField>
    <fullName>News_Accepted_Image_Types__c</fullName>
    <defaultValue>&quot;PNG,GIF,BMP,JPG&quot;</defaultValue>
    <description>Represents the list of acceptable file types when during the News Creation process.</description>
    <inlineHelpText>Represents the list of acceptable file types when during the News Creation process.</inlineHelpText>
    <label>News Accepted Image Types</label>
    <length>60</length>
    <type>Text</type>
</CustomField>