force-app/main/default/objects/Community_Settings__c/fields/News_Max_Sticky__c.field-meta.xml
<CustomField>
    <fullName>News_Max_Sticky__c</fullName>
    <description>An organization can define a maximum number of &quot;sticky&quot; (featured) Community News records that are actively published the Community.</description>
    <label>News Max Sticky</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>