force-app/main/default/objects/Community_Settings__c/fields/News_Photo_Max_Size__c.field-meta.xml
<CustomField>
    <fullName>News_Photo_Max_Size__c</fullName>
    <defaultValue>25</defaultValue>
    <description>Represents the max number of Megabytes (MB) as user can upload for the photo attached to the News item.  This number cannot exceed 25MB.</description>
    <inlineHelpText>Represents the max number of Megabytes (MB) as user can upload for the photo attached to the News item.  This number cannot exceed 25MB.</inlineHelpText>
    <label>News Photo Max Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>