force-app/main/default/objects/Community_Settings__c/fields/Twitter_Data_Widget_ID__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Data_Widget_ID__c</fullName>
    <label>Twitter Data Widget ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>