force-app/main/default/objects/Community_Settings__c/fields/Twitter_Handle__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Handle__c</fullName>
    <label>Twitter Handle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>